--- a/css/index.css
+++ b/css/index.css
@@ -125,4 +125,11 @@ background: linear-gradient(135deg,  #e80045 0%,#ff0084 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e80045', endColorstr='#ff0084',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
+li.ui-tabs-active > a {
+    background-color: rgb(51, 136, 204)!important;
+    border-color: rgb(51, 136, 204) !important;
+    color: rgb(255, 255, 255) !important;
+    text-shadow: 0 1px 0 rgb(0, 85, 153) !important;
+}
+
 
