--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,7 @@ h1 {
     -webkit-animation:fade 3000ms infinite;
 }
 
-.ui-bar-a h1{
+.ui-bar-a{
    background: #e80045 !important; /* Old browsers */
    }
 
