--- a/css/index.css
+++ b/css/index.css
@@ -115,7 +115,7 @@ h1 {
 }
 
 .ui-bar-a{
-   background: #e80045 !important; /* Old browsers */
+  /* background: #e80045 !important;  Old browsers */
    }
 
 
